# AI-Powered-Text-To-SQL-Data-Analyst

./: .gitignore  README.md
backend/: main.py  pyproject.toml
